# ft_printf

./: CMakeLists.txt  Makefile  bits_help.c  fill_s.c  ft_atoi.c  ft_memalloc.c  ft_memset.c  ft_printf.c  ft_printf.h  ft_putchar.c  ft_putstr.c  ft_strcat.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_strlen.c  ft_strncat.c  ft_strncpy.c  ft_strnew.c  ft_strrev.c  ft_strstr.c  ft_uppercase.c  functions.c  identify_specificator.c  init_flags_with_spec.c  init_other_flags.c  initialize.c  my_itoa_base.c  my_unsigned_itoa_base.c  other_flags.c  type_c.c  type_d.c  type_o.c  type_p.c  type_s.c  type_u.c  type_wchar.c  type_x.c  write_char.c
